15_app_lb_listener.tf
resource "aws_lb_listener" "hychai_albli" {
  load_balancer_arn = aws_alb.hychai_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.hychai_albta.arn
  }
}
